--- a/huddle-landing-page-with-single-introductory-section/app/styles/blocks/logo.css
+++ b/huddle-landing-page-with-single-introductory-section/app/styles/blocks/logo.css
@@ -1,10 +1,15 @@
 .logo {
   height: 1.1875rem;
+  height: 2rem;
+  transform: translateX(-0.375rem);
 }
 
 /* tablet */
 @media (min-width: 40em) {
   .logo {
     height: 2rem;
+    height: 3.25rem;
+    transform: translateX(-0.625rem);
+    transform: translateX(-0.2rem);
   }
 }
